<resources>
    <string name="app_name">EasyCook</string>
    <string name="signup_idTV">Id</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_upload">Upload Recipe</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>

    <string name="welcoming">Welcome to the app</string>
</resources>
